# advent-of-code-2021

./: .gitignore  .pdm.toml  pyproject.toml
day_1/: count_measurement_increase_groups_of_three.py  count_measurements_larger_than_previous.py
day_2/: dive.py  dive_part_2.py
day_3/: binary_diagnostic.py
day_4/: giant_squid.py
