[project]
name = ""
version = ""
description = ""
authors = [
    {name = "danielburn5", email = "burns863@mac.com"},
]
dependencies = [
    "numpy>=1.22.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
